// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoryCollectionItem should match snapshot with className 1`] = `
<li
  className="class"
>
  <a
    className="css-ov1ktg"
    href="https://www.economist.com/the-economist-explains/2018/05/15/who-has-the-right-to-judge-americans"
  >
    <div
      className="css-1hygdxi"
    >
      <amp-img
        alt="About us"
        height={720}
        layout="responsive"
        src="https://www.economist.com/sites/default/files/20180512_BLP509.jpg"
        width={1280}
      />
    </div>
    <div
      className="css-1xjhn87"
    >
      <h3
        className="css-1sct6h1 "
      >
        <span
          className="headline css-1ybi9wi css-i5dc08"
        >
          Who has the right to judge Americans?
        </span>
      </h3>
    </div>
  </a>
  <a
    className="css-1uvd0mj css-1io3inc"
    href="https://www.economist.com/help/about-us"
  >
    About us
    <span
      className={undefined}
    >
      <svg
        version="1.1"
        viewBox="0 0 48 48"
        x="0px"
        xmlSpace="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0px"
      >
        <polygon
          points="17.6,14.8 20.4,12 32.4,24 20.4,36 17.6,33.2 26.7,24 	"
        />
      </svg>
    </span>
  </a>
</li>
`;

exports[`StoryCollectionItem should match snapshot without className 1`] = `
<li
  className=""
>
  <a
    className="css-ov1ktg"
    href="https://www.economist.com/the-economist-explains/2018/05/15/who-has-the-right-to-judge-americans"
  >
    <div
      className="css-1hygdxi"
    >
      <amp-img
        alt="About us"
        height={720}
        layout="responsive"
        src="https://www.economist.com/sites/default/files/20180512_BLP509.jpg"
        width={1280}
      />
    </div>
    <div
      className="css-1xjhn87"
    >
      <h3
        className="css-1sct6h1 "
      >
        <span
          className="headline css-1ybi9wi css-i5dc08"
        >
          Who has the right to judge Americans?
        </span>
      </h3>
    </div>
  </a>
  <a
    className="css-1uvd0mj css-1io3inc"
    href="https://www.economist.com/help/about-us"
  >
    About us
    <span
      className={undefined}
    >
      <svg
        version="1.1"
        viewBox="0 0 48 48"
        x="0px"
        xmlSpace="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0px"
      >
        <polygon
          points="17.6,14.8 20.4,12 32.4,24 20.4,36 17.6,33.2 26.7,24 	"
        />
      </svg>
    </span>
  </a>
</li>
`;
